--- a/app/src/main/res/layout/activity_login_password.xml
+++ b/app/src/main/res/layout/activity_login_password.xml
@@ -1,72 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundregistr">
+    android:fillViewport="true"
+    android:id="@+id/skroll_login"
+    >
 
 
-
-
-    <EditText
-        android:layout_marginTop="150dp"
-        android:id="@+id/loginEditText"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:gravity="center"
-        android:hint="Enter your login..."
-        android:textAllCaps="false"
-        android:textColor="@color/white" />
-
-    <EditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:gravity="center"
-        android:hint="Enter your password..."
-        android:textColor="@color/white" />
-
-    
-
-    <Button
-        android:onClick="logIn"
-        android:layout_marginTop="30dp"
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:background="@drawable/button"
-        android:text="Log in to your account"
-        android:textAllCaps="false"
-        android:textColor="#F5E9E9"
-        android:textSize="18sp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="170dp"/>
+        android:background="@drawable/backgroundregistr"
+        android:orientation="vertical">
 
 
-    <Button
-        android:id="@+id/registrBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:background="@drawable/button"
-        android:onClick="goToRegistr"
-        android:text="Registration"
-        android:textAllCaps="false"
-        android:textColor="#F5E9E9"
-        android:textSize="18sp" />
+        <com.google.android.material.textfield.TextInputLayout
+
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginEnd="40dp"
+            android:hint="@string/email"
+            android:textColorHint="@color/white"
+            app:boxStrokeColor="@color/white">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/loginEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:inputType="textEmailAddress"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="40dp"
+            android:hint="@string/password"
+            android:textColorHint="@color/white"
+            app:boxStrokeColor="@color/white">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:inputType="textPassword"
+                android:textAlignment="viewStart"
+                android:textColor="@color/white" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="60dp"
+            android:background="@drawable/button"
+            android:onClick="logIn"
+            android:text="@string/log_in"
+            android:textAllCaps="false"
+            android:textColor="#F5E9E9"
+            android:textSize="18sp" />
 
 
+        <Button
+            android:id="@+id/registrBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="190dp"
+            android:layout_marginRight="60dp"
+            android:background="@drawable/button"
+            android:onClick="goToRegistr"
+            android:text="@string/signup"
+            android:textAllCaps="false"
+            android:textColor="#F5E9E9"
+            android:textSize="18sp" />
 
 
+    </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
