--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,7 +43,7 @@
             android:layout_marginTop="35dp"
             android:layout_marginLeft="35dp"
             android:layout_marginBottom="20dp"
-            android:id="@+id/photoImageView"
+            android:id="@+id/photoImageViewP"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:src="@drawable/photo_profile"
@@ -56,7 +56,7 @@
             app:itemBackground="@drawable/line_items"
             android:id="@+id/navigationView"
             android:background="@drawable/bacgrounduglyest"
-            android:layout_below="@id/photoImageView"
+            android:layout_below="@id/photoImageViewP"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:menu="@menu/user_navigation_menu"
