--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="Orange">#ff7847</color>
     <color name="white">#FFFCFB</color>
     <color name="coral">#fa6243</color>
-
+    <color name="kiwi">#99d94b</color>
+    <color name="grass">#53b824</color>
 
 
 </resources>
