--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backall"
+    xmlns:tool="http://schemas.android.com/tools"
+    android:background="@drawable/backall">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <ImageView
+            android:layout_marginTop="8dp"
+            android:id="@+id/addSongsButton"
+            android:padding="8dp"
+            android:layout_marginLeft="10dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/back"
+            />
+
+        <TextView
+            android:layout_marginTop="19dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:text="@string/profile_item"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/burgerButton"
+            android:padding="8dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:layout_width="47dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/burgerwhite"
+            android:onClick="goToMenu" />
+    </RelativeLayout>
+
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/photoImageView"
+        android:id="@+id/photoImageViewProfileUser"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginTop="15dp"
         android:layout_gravity="center"
         android:src="@drawable/photo_profile"
         app:civ_border_color="@color/white"
@@ -19,8 +65,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        android:text="Name"
+        android:layout_marginTop="15dp"
+        android:text="@string/name_profile"
         android:textColor="@color/white" />
 
     <TextView
@@ -42,11 +88,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="7dp"
-        android:text="Gender"
+        android:text="@string/gender_profile"
         android:textColor="@color/white" />
 
     <TextView
-        android:id="@+id/nameGender"
+        android:id="@+id/genderTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -64,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="7dp"
-        android:text="Country"
+        android:text="@string/country_profile"
         android:textColor="@color/white" />
 
     <TextView
@@ -86,7 +132,7 @@
         android:layout_marginTop="7dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Data of birthday"
+        android:text="@string/hint_birthd"
         android:textColor="@color/white" />
 
 
@@ -104,21 +150,29 @@
         android:layout_marginTop="7dp"
         android:background="@drawable/line_items" />
 
-    <TextView
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
+
+
+    <Button
+        android:layout_marginTop="19dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Measurement system"
-        android:textColor="@color/white" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@android:color/transparent"
+        android:drawableRight="@drawable/chevronright"
+        android:text="@string/system"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+
+         />
 
     <TextView
         android:layout_marginTop="7dp"
         android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Weiht"
+        android:text="@string/weight"
         android:textColor="@color/white" />
 
     <TextView
@@ -127,7 +181,7 @@
         android:id="@+id/weightTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
+        tool:text="0"
         android:textColor="@color/white" />
 
     <View
@@ -143,14 +197,14 @@
         android:layout_marginLeft="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hight"
+        android:text="@string/hight"
         android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/heightTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
+        tool:text="0"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
         android:textColor="@color/white" />
@@ -163,3 +217,4 @@
 
 
 </LinearLayout>
+</ScrollView>
