--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,20 +5,65 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgroundregistr">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="100">
+
+        <ImageView
+            android:layout_marginTop="8dp"
+            android:id="@+id/addSongsButton"
+            android:padding="8dp"
+            android:layout_marginLeft="10dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/back"
+            />
+
+        <TextView
+            android:layout_marginTop="19dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:text="@string/setting_item"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="10dp"
+            android:id="@+id/burgerButton"
+            android:padding="8dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:layout_width="47dp"
+            android:layout_height="35dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/burgerwhite"
+            android:onClick="goToMenu" />
+    </RelativeLayout>
+
+
     <TextView
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Language"
+        android:text="@string/language"
         android:textColor="@color/white"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="English"
+        android:layout_marginRight="20dp"
+        android:background="@android:color/transparent"
+        android:drawableRight="@drawable/chevronright"
+        android:text="@string/english"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -29,18 +74,22 @@
 
     <TextView
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Account type"
+        android:text="@string/account"
         android:textColor="@color/white"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:text="Basic"
+        android:layout_marginRight="20dp"
+        android:background="@android:color/transparent"
+        android:drawableRight="@drawable/chevronright"
+        android:text="@string/basic"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -51,12 +100,14 @@
 
     <Switch
         android:onClick="logOut"
+        android:outlineAmbientShadowColor="@android:color/holo_green_dark"
+        android:outlineSpotShadowColor="@android:color/holo_green_dark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
